# Reimbursement

./: LICENSE  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/src/: config.py  config.template.json  main.py  requirements.txt
backend/src/common/: business_error_code.py  validation.py
backend/src/controller/: file_controller.py  ticket_controller.py  user_controller.py
backend/src/db/: db_configs.py  db_enum.py  db_generator.py
backend/src/db/modals/: base_db.py  ticket.py  user.py
backend/src/router/: router_config.py
backend/src/service/: file_service.py  ticket_service.py  user_service.py
backend/src/utils/: auth.py  datetime.py  file.py
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml  template.env.development
frontend/src/: App.tsx
frontend/src/common/: const.tsx
frontend/src/components/: Alert.tsx  AttachmentPreview.tsx  Button.tsx  Card.tsx  Checkbox.tsx  FileUpload.tsx  Input.tsx  Modal.tsx  Select.tsx  Table.tsx  isLogin.tsx
frontend/src/pages/: EmployeeList.tsx  Homepage.tsx  Login.tsx  Register.tsx  TicketList.tsx
frontend/src/types/: entity.tsx
